--- a/job-portal-frontend/app/globals.css
+++ b/job-portal-frontend/app/globals.css
@@ -1,1 +1,18 @@
 @import 'tailwindcss';
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scaleY(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scaleY(1);
+  }
+}
+.animate-fadeIn {
+  animation: fadeIn 0.2s ease-out;
+}
+
+tbody tr {
+  height: 20px;
+}
